--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "description": "",
   "main": ".eleventy.js",
   "scripts": {
-    "build": "npx @11ty/eleventy",
-    "start": "npx @11ty/eleventy --serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +18,6 @@
   },
   "homepage": "https://github.com/andij/clearviewcleaningsolutions#readme",
   "devDependencies": {
-    "less-watch-compiler": "^1.16.3"
+    "@11ty/eleventy": "^1.0.2"
   }
 }
